data/derived/fa15/progs/unify/prog1506.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> x + 3);(fun x-> x + x)] 3;;
                          ^
Error: This expression has type 'a -> int
       but an expression was expected of type int
